--- a/weather/index.html
+++ b/weather/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>React Weatheer API</title>
     <link href='https://fonts.googleapis.com/css2?family=Carter+One&family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css2?family=Carter+One&family=Itim&family=JetBrains+Mono:ital,wght@0,300;1,300&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="root"></div>
